--- a/package.json
+++ b/package.json
@@ -6,9 +6,16 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "classnames": "^2.3.1",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.5",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
+    "react-yandex-maps": "^4.6.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
